[package]
name = "tilefight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.5"
[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]
